<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/InpTextProf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:textAlignment="center"
    tools:context=".AdminCalculation">

    <TextView
        android:id="@+id/LblTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Topic1"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/TbinputNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/InputHint2"
        android:textColor="@color/black"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LblTopic" />

    <EditText
        android:id="@+id/TbinputNo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/InputHint15"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TbinputNo" />

    <Button
        android:id="@+id/BtnCalc"
        android:layout_width="145dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:onClick="CalcAge"
        android:text="@string/BtnName3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TbinputNo1" />

    <TextView
        android:id="@+id/LblAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:text="@string/txtAns4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnCalc" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="260dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LblAns"
        app:layout_constraintVertical_bias="0.312">

        <RadioButton
            android:id="@+id/RbUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Us6"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/RbYen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/Yen7"
            android:textSize="18dp" />

    </RadioGroup>

    <Button
        android:id="@+id/BtnCal"
        android:layout_width="121dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/Con8"
        app:layout_constraintEnd_toStartOf="@+id/LblMon"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/LblMon"
        android:layout_width="126dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:text="@string/mon9"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LblAns"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/btnBack1"
        android:layout_width="98dp"
        android:layout_height="55dp"
        android:layout_gravity="center"

        android:layout_marginTop="12dp"
        android:backgroundTint="#B83E81"
        android:gravity="center"
        android:text="Back"
        android:textSize="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LblMon"
        app:layout_constraintVertical_bias="0.088" />

</androidx.constraintlayout.widget.ConstraintLayout>